[package]
name = "rust-radio-in-100-lines"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { version = "0.19.0", default-features = false, features = ["symphonia-mp3"] }
tokio = { version = "1.40.0", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12.7", features = ["stream"] }
futures-util = "0.3.30"
ringbuf = "0.4.4"
